crates/rome_formatter/tests/specs/prettier/range/start-equals-end.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: start-equals-end.js

---
# Input
```js
foo = 1.0000;<<<PRETTIER_RANGE_START>>><<<PRETTIER_RANGE_END>>>bar = 1.0000;baz=1.0000;
// The range will be 13~13, should not format anything

```

# Output
```js
foo = 1.0000;
<<<PRETTIER_RANGE_START>>><<<PRETTIER_RANGE_END>>>bar = 1.0000
baz = 1.0000;// The range will be 13~13, should not format anything

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_START>>><<<PRETTIER_RANGE_END>>>bar = 1.0000'
  ┌─ start-equals-end.js:1:14
  │
1 │ foo = 1.0000;<<<PRETTIER_RANGE_START>>><<<PRETTIER_RANGE_END>>>bar = 1.0000;baz=1.0000;
  │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here


```


